src/sample/Errors/M0001.st
FUNCTION_BLOCK M0001

    VAR
        _a: BYTE(-4095..4095);
    END_VAR
END_FUNCTION_BLOCK